--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "nuxt": "^2.4.0",
+    "popper.js": "^1.16.0",
     "vee-validate": "^3.1.1",
     "vue-multiselect": "^2.1.6",
     "vue-swal": "^1.0.0"
