--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "barryvdh/laravel-cors": "^0.11.4",
+        "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0",
+        "spatie/laravel-cors": "^1.6",
         "tymon/jwt-auth": "^1.0.0-rc.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
+        "laravel/tinker": "^1.0",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
