--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "asm89/stack-cors": "^1.3",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
         "laravel/framework": "^6.2",
-        "spatie/laravel-cors": "^1.6",
         "tymon/jwt-auth": "^1.0.0-rc.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
