--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.2",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/framework": "^5.8",
         "tymon/jwt-auth": "^1.0.0-rc.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
